--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+
+/* Nav bar */
+
+nav{
+  text-align: center;
+  display: inline;
+}
+
+ul{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;  
+  position: relative;
+  width: -webkit-fill-available;
+
+}
+.nav-item {
+  align-self: flex-end;
+}
+
+ul ul {
+position: absolute;
+display: none;
+}
+
+li{
+  color: black;
+  display: inline-block;
+  font-family: 'Average Sans', sans-serif;
+  position: relative;
+  text-align: left;
+  
+}
+
